# FastApiProj

./: .env-example  Makefile  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: Makefile  app_factory.py  settings.py
backend/app/apps/core/: base_models.py  schemas.py
backend/app/apps/info/: router.py  schemas.py
backend/app/apps/users/: models.py  router.py  schemas.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2026_04_25_1843-7e8159c3400c_add_user.py
documentation/docs/: index.md
nginx/: nginx.conf
