[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Admin",email = "admkiev@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.136.0,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
