[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Admin",email = "admkiev@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.136.0,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
